2007-12-24  Stéphane Charette  <stephanecharette@gmail.com>
	* src/ReportBase/_GraphvizReportDialog.py: more generic changes
	to the new GraphViz base class

2007-12-24  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/_MyGrampsView.py: new DataView for Gadgets
	* src/DataViews/__init__.py: import things from _MyGrampsView
	* src/Config/_GrampsConfigKeys.py: added data-views
	* src/glade/gramps.glade: added My Gramps Gadget gui
	* src/plugins/DefaultGadgets.py: sample gadgets

2007-12-24  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/Makefile.am: Add _DocReportDialog.py to the Makefile

2007-12-23  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_PaperMenu.py: 0001480: custom paper size is not editable 
	for 2nd and any additional invocations of the report

2007-12-23  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_Bibliography.py:
  	 Fix 0001393: Detailed descendant report crash on too many references.

2007-12-23 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/plugins/ExtractCity.py: Fix #0001160: Regular expressions, 
	dash/separator and non-ASCII characters on ExtractCity

2007-12-23  Brian Matherly <brian@gramps-project.org>
	* src/plugins/DetAncestralReport.py:
	* src/plugins/DetDescendantReport.py:
	* src/plugins/FanChart.py:
	Add fields to translation strings. 

2007-12-23  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/Makefile.am:
	* src/plugins/Makefile.am: updates to makefiles

2007-12-22  Stéphane Charette  <stephanecharette@gmail.com>
	* src/ReportBase/_GraphvizReportDialog.py:
	* src/PluginUtils/__init__.py:
	* src/PluginUtils/_MenuOptions.py:
	Work in progress to add some additional GraphViz options that can be
	used by any GraphViz-based plugin.

2007-12-21  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/lineage.py: moved to new quick view format
	* src/docgen/TextBufDoc.py: fixed transient window issue

2007-12-21 Gary Burton <gary.burton@zen.co.uk>