@@ -1,3 +1,6 @@
+2007-12-24  Brian Matherly <brian@gramps-project.org>
+	* src/ReportBase/_GraphvizReportDialog.py: Fix default font.
+
 2007-12-24  Stéphane Charette  <stephanecharette@gmail.com>
 	* src/ReportBase/_GraphvizReportDialog.py: more generic changes
 	to the new GraphViz base class
